<resources>
    <string name="app_name">Blue Sky Charts</string>
    <string name="main_menu_caption">Main Menu</string>
    <string name="subscription_ad_unsubscribing_customer">Manage your subscription by clicking the button below.  This will allow you to perform the following activites.\n|Change payment method|Unsubscribe</string>
    <string name="subscription_ad_unsubscribing_customer_cta">Manage Subscription</string>
    <string name="subscription_ad_returning_customer">Resubscribe to get access to all features.\n|Download FAA VFR charts|METAR overlays|Location tracking|A great value for VFR pilots who normally purchase physical maps.</string>
    <string name="subscription_ad_returning_customer_cta">Resubscribe</string>
    <string name="subscription_ad_free_trial">Start your free trial now*\n|Access to all features for one month free!|Download FAA VFR charts.|METAR overlays.|Location tracking.|No payments until the trial ends.|Don\'t like it?  It\'s easy to unsubscribe.\n\n* Free trial only available to new subscribers.</string>
    <string name="subscription_ad_free_trial_cta">Subscribe</string>
    <string name="privacy_settings_description">When you consent to data collection as outlined in the privacy policy, you are contributing to our understanding of what features you use within the application and if any crashes are occurring.  We do not sell any of this information to other parties.  Enabling data collection gives us valuable information to improve this product.\n\nFor more information refer to https://blueskycharts.com/privacy.html</string>
    <string name="privacy_settings_checkbox">I consent to the collection of data for use in Firebase as outlined in the privacy policy.</string>
    <string name="privacy_settings_cta">Save Changes</string>
    <string name="downloads_on_hold">Downloads are on hold because you are not on an un-metered wifi connection.</string>
    <string name="download_preferences_instructions">Select maps to download them for offline viewing.</string>
    <string name="manage_memory_downloaded_label">Downloaded maps</string>
    <string name="manage_memory_cache_label">Cached content</string>
    <string name="manage_memory_clear_cache_button">Clear cache data</string>
    <string name="manage_subscription_button">Add Subscription</string>
    <string name="consent_terms_checkbox">I consent to the Terms of Service. (required)</string>
    <string name="consent_privacy_checkbox">I consent to the Privacy Policy. (required)</string>
    <string name="consent_firebase_checkbox">I consent to the collection of data for use in Firebase as outlined in the policy. (recommended)</string>
    <string name="consent_continue_button">Continue</string>
    <string name="consent_cancel_button">Cancel</string>
</resources>