<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ConsentFragment">

    <WebView
        android:id="@+id/privacyWebView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/separator"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_weight="1" />

    <View
        android:id="@+id/separator"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@color/colorSeparator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/space1"
        />

    <Space
        android:id="@+id/space1"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        app:layout_constraintBottom_toTopOf="@+id/termsConsent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/termsConsent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/consent_terms_checkbox"
        android:textColor="@color/colorTextOnBackground"
        app:buttonTint="@color/colorTextOnBackground"
        app:layout_constraintBottom_toTopOf="@+id/privacyConsent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/privacyConsent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/consent_privacy_checkbox"
        android:textColor="@color/colorTextOnBackground"
        app:buttonTint="@color/colorTextOnBackground"
        app:layout_constraintBottom_toTopOf="@+id/firebaseConsent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/firebaseConsent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/consent_firebase_checkbox"
        android:textColor="@color/colorTextOnBackground"
        app:buttonTint="@color/colorTextOnBackground"
        app:layout_constraintBottom_toTopOf="@+id/space2"
        app:layout_constraintStart_toStartOf="parent" />

    <Space
        android:id="@+id/space2"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/closeAppButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorButtonTextSecondary"
            android:text="@string/consent_cancel_button" />

        <Button
            android:id="@+id/acceptPolicyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorButtonTextSecondary"
            android:text="@string/consent_continue_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>